<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Pro Версия">
        <Preference
            android:key="pro_status"
            android:title="Обновить статус"/>
        <Preference
            android:key="pro_more"
            android:title="Подробнее">
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Google Account">
        <Preference
            android:key="sing_in_google"
            android:title="Вход"/>
        <Preference
            android:key="sing_out"
            android:title="Выход">
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Доп. настройки">
        <ListPreference
            android:title="@string/pref_title_save_db"
            android:entries="@array/pref_list_save_db"
            android:entryValues="@array/pref_list_save_db_val"
            android:summary="@string/pref_desc_save_db"
            android:key="save_db_s"
            android:defaultValue="default"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="search_all"
            android:summary="@string/pref_desc_search_all"
            android:title="@string/pref_title_search_all" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="hide_ts"
            android:summary="Не показывать фильмы с качеством ts (плохое/пиратское)"
            android:title="Убрать TS" />
    </PreferenceCategory>

</PreferenceScreen>
